rendered/envs/demo/grafana/service-grafana-image-renderer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana-image-renderer
    app.kubernetes.io/version: 12.0.1
    helm.sh/chart: grafana-9.2.4
  name: grafana-image-renderer
  namespace: grafana
spec:
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana-image-renderer
  type: ClusterIP
