rendered/envs/demo/grafana/networkpolicy-grafana-image-renderer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    comment: Limit image-renderer ingress traffic from grafana
  name: grafana-image-renderer-ingress
  namespace: grafana
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: grafana
              app.kubernetes.io/name: grafana
      ports:
        - port: 8081
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: grafana
      app.kubernetes.io/name: grafana-image-renderer
  policyTypes:
    - Ingress
